[gd_scene load_steps=6 format=3 uid="uid://bbkdacmg33o2q"]

[ext_resource type="Theme" uid="uid://7kt8u7jnbucu" path="res://themes/menu_theme.tres" id="1_a0tc0"]
[ext_resource type="Script" path="res://scenes/Menus/title.gd" id="2_eqb2m"]
[ext_resource type="PackedScene" uid="uid://bueuv504gyu84" path="res://scenes/Menus/Buttons/audio_button.tscn" id="4_vljnc"]
[ext_resource type="Texture2D" uid="uid://dah46lnogvaic" path="res://assets/Sprites/Logo.png" id="5_kvslw"]
[ext_resource type="Texture2D" uid="uid://de5rjxuowpjdd" path="res://assets/Sprites/Main Characters/Ninja Frog/fall-Sheet.png" id="6_08vh0"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_a0tc0")
script = ExtResource("2_eqb2m")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.0
offset_top = -139.5
offset_right = 110.0
offset_bottom = 139.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16
alignment = 1

[node name="Logo" type="TextureRect" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 2
texture = ExtResource("5_kvslw")
stretch_mode = 5
metadata/_edit_group_ = true

[node name="Fall-sheet" type="Sprite2D" parent="VBoxContainer/Logo"]
position = Vector2(122.22, 101)
scale = Vector2(19.456, 3.75)
texture = ExtResource("6_08vh0")
region_enabled = true
region_rect = Rect2(0, 0, 9, 20)
metadata/_edit_group_ = true

[node name="Play" parent="VBoxContainer" instance=ExtResource("4_vljnc")]
layout_mode = 2
text = "Play"

[node name="Options" parent="VBoxContainer" instance=ExtResource("4_vljnc")]
layout_mode = 2
text = "Options"

[node name="Exit" parent="VBoxContainer" instance=ExtResource("4_vljnc")]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
